FEAT: Documentando e gerando o fluxo de login da api
