# src/controller/UserController.ts
@@ -7,6 +7,7 @@ export default class UserController {
   constructor(userService: IUserService) {
     this.userService = userService;
     this.register = this.register.bind(this);
+    this.login = this.login.bind(this);
   }
 
   public async register(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
@@ -16,6 +17,18 @@ export default class UserController {
       const token = await this.userService.register({ name, email, password, cpf, cnpj });
 
       return res.status(201).json({ token });
+    } catch (error) {
+      next(error);
+    }
+  }
+
+  public async login(req: Request, res: Response, next: NextFunction): Promise<Response | void> {
+    try {
+      const { accountNumber, agency, password } = req.body;
+
+      const token = await this.userService.login({ accountNumber, agency, password });
+
+      return res.status(200).json({ token });
     } catch (error) {
       next(error);
     }
